--- a/PirateHandbook/Base.lproj/Main.storyboard
+++ b/PirateHandbook/Base.lproj/Main.storyboard
@@ -21,10 +21,10 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="QGh-T7-h7u">
-                                <rect key="frame" x="71" y="370" width="272" height="166"/>
+                                <rect key="frame" x="20" y="370" width="374" height="166"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xhg-AD-sJU">
-                                        <rect key="frame" x="0.0" y="0.0" width="272" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="Bdd-Fn-TNc"/>
                                         </constraints>
@@ -36,7 +36,7 @@
                                         </buttonConfiguration>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Gi-t0-FWY">
-                                        <rect key="frame" x="0.0" y="58" width="272" height="50"/>
+                                        <rect key="frame" x="0.0" y="58" width="374" height="50"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Weather Forecast">
@@ -45,10 +45,10 @@
                                         </buttonConfiguration>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="YkV-F1-ctY">
-                                        <rect key="frame" x="0.0" y="116" width="272" height="50"/>
+                                        <rect key="frame" x="0.0" y="116" width="374" height="50"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zFD-on-s9J">
-                                                <rect key="frame" x="0.0" y="0.0" width="130" height="50"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="181" height="50"/>
                                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Privacy Policy">
@@ -57,7 +57,7 @@
                                                 </buttonConfiguration>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vbr-qm-0IW">
-                                                <rect key="frame" x="142" y="0.0" width="130" height="50"/>
+                                                <rect key="frame" x="193" y="0.0" width="181" height="50"/>
                                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="FAQs">
@@ -87,8 +87,9 @@
                             <constraint firstAttribute="trailingMargin" secondItem="Nhk-pU-ncA" secondAttribute="trailing" id="0kN-aH-Iq5"/>
                             <constraint firstItem="QGh-T7-h7u" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="17O-NS-WkO"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Nhk-pU-ncA" secondAttribute="bottom" constant="8" id="1Td-Ud-xPW"/>
+                            <constraint firstItem="QGh-T7-h7u" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="BvP-Xh-DLf"/>
                             <constraint firstItem="Nhk-pU-ncA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ag3-LH-FPG"/>
-                            <constraint firstItem="QGh-T7-h7u" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="xl7-IT-yCy"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="QGh-T7-h7u" secondAttribute="trailing" id="yoM-dT-269"/>
                         </constraints>
                     </view>
                 </viewController>
